--- a/src/components/site/pages/Basket/BasketPage.module.scss
+++ b/src/components/site/pages/Basket/BasketPage.module.scss
@@ -329,13 +329,17 @@
 
 .rowPay {
   position: fixed;
-  top: 20px;
-  bottom: 20px;
+  top: 0;
+  bottom: 0;
+  background-color: #f2f2f2;
 
   right: 0;
   left: 0;
   overflow-y: scroll;
   z-index: 1000px;
+  &::-webkit-scrollbar{
+    width: 0;
+  }
 }
 
 .col_25 {
